<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="3dp"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/taskCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sampleTask"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="3dp"
                android:layout_margin="5dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:contentDescription="@string/icon"
                    android:id="@+id/timeIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_access_time_24"
                    android:padding="5dp"
                    android:layout_marginStart="5dp"/>

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/timeIcon"
                    android:padding="5dp"
                    android:text="@string/sampleTime"
                    android:textStyle="bold"
                    android:textSize="17dp" />

                <ImageView
                    android:contentDescription="@string/icon"
                    android:id="@+id/deleteTaskIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_delete_24"
                    android:layout_toLeftOf="@id/editTaskIcon"
                    android:padding="5dp"
                    android:layout_marginEnd="5dp"
                    />

                <ImageView
                    android:contentDescription="@string/icon"
                    android:id="@+id/editTaskIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_edit_24"
                    android:layout_alignParentRight="true"
                    android:padding="5dp"
                    android:layout_marginEnd="5dp"/>

            </RelativeLayout>

<!--            <ProgressBar-->
<!--                android:id="@+id/progressBar"-->
<!--                style="?android:attr/progressBarStyleHorizontal"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:max="100"-->
<!--                android:progress="100"-->
<!--                android:visibility="invisible" />-->

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>